--- a/app/templates/chart-start.hbs
+++ b/app/templates/chart-start.hbs
@@ -1,3 +1,2 @@
 start show page.
-<div id="chartdiv" style="height:400px;width:300px; "></div>
-<button id="test-button">test button</button>
+{{x-jqplot}}
